<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

        <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_hello" />

    <EditText
        android:id="@+id/inputMBTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="22dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/start_mbtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/inputMBTC"
        android:layout_toRightOf="@+id/inputMBTC"
        android:text="@string/start_mbtc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputMBTC"
        android:layout_below="@+id/inputMBTC"
        android:layout_marginTop="35dp"
        android:text="@string/start_instruction" />
    
    <Button
        android:id="@+id/scanAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:text="@string/start_scan_address" />

    <Button
        android:id="@+id/inputAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scanAddress"
        android:layout_marginTop="10dp"
        android:text="@string/start_enter_address" />

    <TextView
        android:id="@+id/mbtcinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_mbtc"
        android:layout_alignBottom="@+id/start_mbtc"
        android:layout_toRightOf="@+id/start_mbtc"
        android:layout_marginLeft="5dp"
        android:text="" />
    
    </RelativeLayout>
    </ScrollView>

</RelativeLayout>